--- a/style.css
+++ b/style.css
@@ -17,10 +17,10 @@ body {
 .bg {
     background: url('https://scontent-lga3-2.xx.fbcdn.net/v/t1.6435-9/120948145_10158688854135758_5823331564821314092_n.jpg?_nc_cat=108&ccb=1-3&_nc_sid=8bfeb9&_nc_ohc=_d5cdkB4YY0AX_oWck_&_nc_ht=scontent-lga3-2.xx&oh=1f01c71b252a0775769494c19f399e98&oe=60A35608') no-repeat center center/cover;
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
+    top: -30px;
+    left: -30px;
+    width: calc(100vw + 60px);
+    height: calc(100vh + 60px);
     z-index: -1;
     filter: blur(0px);
 }
